--- a/Add_Bookmark_to_Onenote_exported_PDF.ipynb
+++ b/Add_Bookmark_to_Onenote_exported_PDF.ipynb
@@ -207,22 +207,33 @@
       "source": [
         "# Extract titles and timestamps\n",
         "titles_with_pages = extract_titles_with_timestamps(pdf_path)\n",
+        "print(titles_with_pages)\n",
         "\n",
         "# Add bookmarks to the PDF\n",
         "output_pdf_path = add_bookmarks_to_pdf(pdf_path, titles_with_pages)\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Provide download link if the output file is successfully created\n",
         "if output_pdf_path:\n",
         "    files.download(output_pdf_path)\n",
         "else:\n",
         "    print(\"Failed to create the PDF with bookmarks.\")"
-      ]
+      ],
+      "metadata": {
+        "id": "C1kJU3Ys_dZz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEpKugqPSANzmLSKZyO/x4",
+      "authorship_tag": "ABX9TyM0l3sAVrtErJC+YdhllUyi",
       "include_colab_link": true
     },
     "kernelspec": {
